--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,9 @@ generic_find (LIBNAME KmsGstCommons REQUIRED)
 generic_find (LIBNAME libsoup-2.4 VERSION ${SOUP_REQUIRED} REQUIRED)
 generic_find (LIBNAME nice VERSION ${NICE_REQUIRED} REQUIRED)
 generic_find (LIBNAME gio-2.0 VERSION ${GLIB_REQUIRED} REQUIRED)
-generic_find (LIBNAME uuid REQUIRED)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  generic_find (LIBNAME uuid REQUIRED)
+endif ()
 
 set (VERSION ${PROJECT_VERSION})
 set (PACKAGE ${PROJECT_NAME})
