--- a/src/server/implementation/HttpServer/CMakeLists.txt
+++ b/src/server/implementation/HttpServer/CMakeLists.txt
@@ -34,8 +34,10 @@ add_library(kmshttpep ${HTTP_EP_SOURCES})
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   set (HTTP_EP_FLAGS "-Wno-pedantic-ms-format")
+  set (HTTP_EP_LIBRARIES "-lrpcrt4")
 else ()
   set (HTTP_EP_FLAGS "-fPIC")
+  set (HTTP_EP_LIBRARIES "")
 endif ()
 
 set_target_properties(kmshttpep PROPERTIES
@@ -61,4 +63,5 @@ target_link_libraries(kmshttpep
   ${gio-2.0_LIBRARIES}
   ${nice_LIBRARIES}
   ${KmsGstCommons_LIBRARIES}
+  ${HTTP_EP_LIBRARIES}
 )
