webrtcendpoint: Link webrtcendpointlib.dll against SDP-related libs

--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -121,6 +121,7 @@ target_link_libraries(kmswebrtcendpointlib
   ${gstreamer-base-1.5_LIBRARIES}
   ${gstreamer-pbutils-1.5_LIBRARIES}
   ${nice_LIBRARIES}
+  -lkmssdpagent -lgstsdp-1.0.dll
 )
 
 set_target_properties(kmswebrtcendpointlib PROPERTIES PUBLIC_HEADER "${KMS_WEBRTC_HEADERS}")
