rtpendpoint: Link against libkmssdpagent and libgstsdp

--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -45,6 +45,7 @@ target_link_libraries(rtpendpoint
   ${gstreamer-sdp-1.5_LIBRARIES}
   ${gstreamer-pbutils-1.5_LIBRARIES}
   ${nice_LIBRARIES}
+  -lkmssdpagent -lgstsdp-1.0.dll
 )
 
 install(
